    definition, changed signature.  The arguments to the device
    constructor must now be passed as a dict.

  * Python 2 is no longer supported.

  * New requirements:

    * Python >= 3.5
    * hidapi

* New devices supported:

  * Andor (EM)CCD cameras (requires Andor's atmcd C library)
  * Aurox Clarity (requires hidapi Python package)
  * Linkam stage (requires LinkamSDK C library)
  * Ximea cameras (requires Ximea's xiAPI Python package)

* Changes to device ABCs:

  * Laser devices:

    * New abstract methods:

      * `LaserDevice.get_min_power_mw`
      * `LaserDevice.is_alive`

    * `LaserDevice.set_power_mw` now clips the set value to the device
      actual range.  Previously, the behaviour was undefined and
      device specific.

  * Camera devices:

    * Added support ROI and binning settings.  Also added new classes
      `ROI` and `Binning` to represent the new settings.

  * DataDevices:

    * Now handle a stack of clients.  This enables having the data
      sent to multiple clients.

* Device specific changes:

  * Omicron TA Deepstar laser:

    * Now returns actual laser power instead of the set laser power.
      Requires device to be fitted with the APC option.

  * Test camera:

    * Added new settings to control generated images.  Instead of
      always returning noise, can also return stripes or spots.

* Removed requirements:

  * enum34
  * six

* The `deviceserver` program can now be used as a Windows service.

* Fixed PyPI releases to include the microscope.mirror and
  microscope.filterwheels subpackages.


Version 0.2.0 (2018/06/13)
--------------------------

* New classes:

  * DeformableMirror
  * TriggerTargetMixIn
  * SerialDeviceMixIn
  * TriggerType
  * TriggerMode

* New hardware supported:

  * Alpao deformable mirrors
  * Boston Micromachines Corporation (BMC) deformable mirrors
  * Thorlabs filter wheels

* Abstract class for FilterWheel moved to the `microscope.devices`